fixed z-index of priority hud

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -143,7 +143,7 @@ textarea {
         }
 
         & > .hud {
-          // z-index: 1;
+          z-index: 1;
           position: relative;
           float: right;
           margin-left: 0.5em;
